# 2026S-HC

./: .gitignore
esp32-voice-assistant/: README.md  report.tex
esp32-voice-assistant/backend/: README.md
esp32-voice-assistant/backend/agent-bridge/: .dockerignore  Dockerfile  package-lock.json  package.json
esp32-voice-assistant/backend/agent-bridge/src/: app.ts  index.ts  pi-runner.ts  stream-runner.ts  voice-profile.ts
esp32-voice-assistant/backend/agent-bridge/test/: ask.test.mjs  codex-web-search-extension.test.mjs  compose-runtime.test.mjs  pi-runner.test.mjs  stream.test.mjs  voice-profile-sync.test.mjs
esp32-voice-assistant/backend/api/: Dockerfile  pyproject.toml
esp32-voice-assistant/backend/api/src/siri_backend/: __init__.py  app.py  fixtures.py
esp32-voice-assistant/backend/api/tests/: test_voice_api.py
esp32-voice-assistant/backend/api/tests/fixtures/: README.md
esp32-voice-assistant/backend/deploy/: .env.example  docker-compose.yml
esp32-voice-assistant/backend/deploy/.pi/agent/: SYSTEM.md  settings.json
esp32-voice-assistant/backend/deploy/nginx/: backend.example.conf
esp32-voice-assistant/backend/rust-cli/: Cargo.toml
esp32-voice-assistant/backend/rust-cli/crates/siri-cli/: Cargo.toml
esp32-voice-assistant/backend/rust-cli/crates/siri-cli/src/: lib.rs  main.rs  smoke.rs
esp32-voice-assistant/backend/rust-cli/crates/siri-client/: Cargo.toml
esp32-voice-assistant/backend/rust-cli/crates/siri-client/src/: lib.rs
esp32-voice-assistant/firmware/esp32-s3/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
esp32-voice-assistant/firmware/esp32-s3/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
esp32-voice-assistant/firmware/esp32-s3/main/core/: backend_client.c  backend_client.h  voice_session.c  voice_session.h  wifi_connect.c  wifi_connect.h
esp32-voice-assistant/firmware/esp32-s3/main/input/: board_audio.c  board_audio.h  recorder.c  recorder.h  wake_afe.c  wake_afe.h
esp32-voice-assistant/firmware/esp32-s3/main/output/: capture_output.c  capture_output.h  status_led.c  status_led.h
esp32-voice-assistant/firmware/esp32-s3/main/shared/: wav.c  wav.h
(+4 files in other folders)
