[package]
name = "siri-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
siri-client = { path = "../siri-client" }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["serde"] }
